fix final layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,10 @@ ul li {
     display: none;
 }
 
+li#img3 img, li#img6 img {
+    padding-left: 10px;
+}
+
 button {
     margin-top: 10px;
     background-color: firebrick;
